# mcqsbank

./: .env  4daagseAPI2.py  aiman  aiman.pub  hamza  hamza.pub  package-lock.json  pyproject.toml  render.yaml  requirements.txt
quizapp/: .env  Procfile  build.sh  db.sqlite3  pyproject.toml  requirements.txt  settings.py  start.sh  urls.py  urls_2.py
quizapp/api/: admin.py  auth.py  authentication.py  docs.py  models.py  serializers.py  urls.py  views.py
quizapp/api/chains/: base.py  file.ipynb  flashcard_chain.py  notes_chain.py  quiz_chain.py  structured.py  youtube.py
quizapp/api/migrations/: 0001_initial.py  0002_add_pdf_content.py  0002_alter_pdfdocument_embedding_store_and_more.py  0002_auto_20250523_1135.py  0003_quiz_quiz_type.py  0004_quiz_difficulty_quiz_language_alter_quiz_quiz_type.py  0005_alter_quiz_quiz_type.py  0006_alter_quiz_language.py  0007_pdfdocument_user.py  0008_merge_0007_pdfdocument_user_cleanup_pdfs.py  0009_alter_pdfdocument_user_delete_youtubecontent.py  0010_rename_quiz_quizmodel.py  cleanup_pdfs.py
quizapp/api/models/: __init__.py  chat_models.py  pydantic_models.py  quiz_models.py  user_model.py  youtube_models.py
quizapp/api/serializers/: __init__.py  learning_serializers.py  pdf_serializers.py  quiz_serializers.py
quizapp/api/utils/: pdf_processor.py
quizapp/quizapp/: celery.py  settings.py  urls.py
quizchat-magic/: .env  README.md  index.html  package-lock.json  package.json  render.yaml  tailwind.config.ts  vite.config.ts
quizchat-magic/src/: App.tsx  config.ts  env.d.ts  index.css  routes.tsx
(+104 files in other folders)
