[tool.poetry]
name = "quizapp"
version = "0.1.0"
description = "MCQs Bank Application"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.7"
gunicorn = "^21.2.0"
djangorestframework = "^3.15.2"
django-cors-headers = "^4.7.0"
python-dotenv = "^1.0.1"
djangorestframework-simplejwt = "^5.5.0"
openai = "^1.66.3"
google-generativeai = "^0.8.4"
whitenoise = "^6.6.0"
drf-yasg = {extras = ["validation"], version = "^1.21.7"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-django = "^4.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 